<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".meditation.MeditationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_beginner"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#f4f0f1"
            android:weightSum="5.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="4"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/beginner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:text="@string/beginner"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_intermediate"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#e7ebee"
            android:weightSum="5.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="4"
                app:srcCompat="@drawable/intermediate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:text="@string/intermediate"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_advanced"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff"
            android:weightSum="5.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="4"
                app:srcCompat="@drawable/advanced" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:text="@string/advanced"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>